# Cmake-CLI-Framework

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
CMake/: FindLibsodium.cmake
include/InputValidators/: Constraint.h  DefaultCheckStrategyNPC.h  DefaultCheckStrategyPC.h  InputValidator.h  NonParametrizedConstraint.h  ParametrizedConstraint.h
include/ProgramActions/: MainProgramStrategy.h  ProgramAction.h  ShowHelpClippStrategy.h  ShowShortHelpAction.h  ShowShortHelpStrategy.h  ShowUsageClippStrategy.h  ShowVersionInfoAction.h  ShowVersionInfoStrategy.h  UnsupportedOptionsAction.h  UnsupportedOptionsClippStrategy.h
src/: CMakeLists.txt  HelpAction.h  MainAction.h  MainProgramAction.h  MainProgramStrategy.h  ProgramAction.h  ShowHelpAction.h  ShowHelpClippStrategy.h  ShowShortHelpStrategy.h  ShowUsageAction.h  UsageAction.h  VersionInfoAction.h  app.cpp  cli_app.cxx  design_test.cxx  type_erasure.cxx  validators.cxx
